Reduce text to fix overflow line breaks

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -298,6 +298,6 @@ details[open]>summary::after {
   transform: rotate(90deg);
 }
 
-#app .Layout #VPContent .VPHome .VPHero .container .main .text {
+/* #app .Layout #VPContent .VPHome .VPHero .container .main .text {
   font-size: 52px;
-}
+} */
